- Removed the unused LocationList
- Changed the order that the inventory and other stuff is loaded on join and leave
- Added a (hopefully) better /hg stat
- Added null checks for spawnpoints
- separation of some methods out of HungerGames
- Added a getPerm() field to CommandUsage and changed name to Commands
- Implemented resetter for HawkEye
- Fixed changes by non-playing players that had left the game, but not quitted being added internally
- Added a getPlayingSession()
- Removed some double sending messages
- Made InventorySave not use getArmorContents
- Added /hg stop <game name>
- Reorganization of stop, stopGame, start, startGame
- added getType() to Commands
- Improved Logging


v0.4.3
- Fixed nullpointerexception in getSpectating() for real this time
v0.4.1
- Fixed nullpointerexception in getspectating()
v0.4
- Might have fixed the games not saving
- Fixed a nullpointerexception
- Basic spectating
- Changed most player keys to String keys
- Might have fixed permissions. (again)
- Added specific block change listener. Can be internal, LogBlock, or HawkEye (HawkEye is not currently implements) requests are open for more
- Added a Restock command to restock all chests in a game

v0.3.1
- Logging stuff
- register forgotten BlockListener
- Can-teleport
- use-command
- Early world reseting in the form of full world
- /hga add game <game name>' now instructs user to add spawnpoints after creating it.
- Fixed players still being able to join even under conditions where they shouldn't be able to
- Added option to allow chests to be automatically added and filled at first open

v0.3
- Clearing inventories is now optional
- Fixed winner not being recognized
- Add quit command.
- Cleanup
- Lives cleanup
- Rejoin/Join/Leave cleaned up
- Added Metrics
- Use equalsIgnoreCase, not equals for commands
- all-vote is in
- block interact/place/break options
- Added an unimplemented Logging class
- Auto-vote
- Made quitting before a game starts remove you from the games stats