@@ -1,10 +1,8 @@
 HIGH:
 - Improved map reset
 - economy config stuff
-- /hga restock
 - Enhance Spectating
 - Ability for sponsors to invisibly teleport to a player to sponsor and stuff
-- Fix quit to separate playing players from non-playing
 
 MEDIUM:
 - Random events
@@ -32,5 +30,3 @@ LOW:
 OPTIONAL:
 - Chat
 - Possible timed game events
-
-
